--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,7 +49,7 @@ input, select, img {
 	margin-bottom: 5px;
 }
 
-@media screen and (max-width: 650px){
+@media screen and (min-width: 400px){
 	#contenedor {
 		width: 95%;
 		margin: 0 auto;
